@@ -1,3 +1,4 @@
+- on upgrade, don't add resume=xxx if noresume is there (#33953)
 - diskdrake
   o fix "Add to LVM"
 - do not display any message when user screenshot when chrooted during install
